# basic2dgraphics

./: .gitignore  README.md  pyproject.toml  run.py
models/: __init__.py  color.py  draw.py  surface.py
models/buttons/: __init__.py  basebutton.py  clearbutton.py  drawactionbutton.py  drawcolorbutton.py  drawsizebutton.py  imagebutton.py  shapebutton.py  textbutton.py
screenshots/: desktop.ini
