[tool.poetry]
name = "2dgraphics"
version = "0.1.0"
description = "Build basic images using 2D Graphics primitives."
authors = ["Mujy Kun <mujy@irenebot.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "2.1.2"
black = "^22.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
